--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -19,7 +19,7 @@
                                     <p class="card-text">{{post.content | truncatechars:60}}</p>
                                     <div class="d-flex justify-content-between">
                                         <a href="{% url 'detail' slug=post.slug %}">Read More</a>
-                                        <a class="text-decoration-none text-dark fw-bold" href="#">Sports</a>
+                                        <a class="text-decoration-none text-dark fw-bold" href="#">{{post.category.name}}</a>
                                     </div>
                                 </div>
                             </div>
